--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit>=1.36.0
-pandas>=2.2.0
-numpy>=1.26.0
-openpyxl>=3.1.2
+streamlit
+pandas
+numpy
+yfinance
+requests
+openpyxl
 finnhub-python>=2.4.0
